refact(createproduct)
add product service in main file and regenerate documentation
