# cmd/api/docs/swagger.json
@@ -147,12 +147,16 @@
         },
         "/product": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Product",
-                    "User Authentication"
+                    "Product"
                 ],
                 "summary": "Create a new product",
                 "operationId": "createproduct",
